# Digital_image_processing

./: .gitignore  README.md
COURSE_MATERIAL/Project1/Project1/: main.cpp
COURSE_MATERIAL/Project2/Project2/: Equalization.cpp  Equalization.h  main.cpp
COURSE_MATERIAL/Project3and4/Project3/: Spatial_Filtering.cpp  Spatial_Filtering.h  main.cpp
COURSE_MATERIAL/Project5频率滤波/频率滤波/: 源.cpp
COURSE_MATERIAL/test_picture/: Project-2018 DIPA.ppt
COURSE_MATERIAL/扩展实验1_Canny边缘检测/扩展实验1_Canny边缘检测/: Opencv401_X64_Debug.props  源.cpp
COURSE_MATERIAL/拓展实验2_连通域的搜索/拓展实验2_连通域的搜索/: 源.cpp
COURSE_MATERIAL/拓展实验3_harris角点检测与绘制/拓展实验3_/: 源.cpp
COURSE_MATERIAL/拓展实验4/: driverFatigue_v2.py
Project1/Project1/: main.cpp
Project2/Project2/: Equalization.cpp  Equalization.h  Opencv401_X64_Debug.props  main.cpp  源.cpp
Project3/Project3/: Equalization.cpp  Equalization.h  Spatial_Filtering.cpp  Spatial_Filtering.h  main.cpp
Project5频率滤波/频率滤波/: 源.cpp
SELF_STUDY/: README.md  SUMMARY.md
SELF_STUDY/C_PLUS_code/1/: CMakeLists.txt  run2_1.sh
SELF_STUDY/C_PLUS_code/1/doc/: note.md
SELF_STUDY/C_PLUS_code/1/src/: 2_1.cpp  CMakeLists.txt
SELF_STUDY/C_PLUS_code/2/: CMakeLists.txt  data.txt  run2_3.sh
SELF_STUDY/C_PLUS_code/2/src/: 2_3.cpp  CMakeLists.txt
SELF_STUDY/chapter1/: README.md
SELF_STUDY/chapter11/: README.md
SELF_STUDY/chapter12/: README.md
SELF_STUDY/chapter2/: README.md
SELF_STUDY/chapter3/: README.md
SELF_STUDY/chapter4/: README.md
SELF_STUDY/chapter5/: README.md
SELF_STUDY/chapter6/: README.md
SELF_STUDY/chapter7/: README.md
SELF_STUDY/chapter8/: README.md
SELF_STUDY/chapter9/: README.md
SELF_STUDY/cmake_practice/t1/: CMakeLists.txt  main.cpp
SELF_STUDY/cmake_practice/t2/: CMakeLists.txt  runhello.sh
SELF_STUDY/cmake_practice/t2/src/: CMakeLists.txt  main.cpp
SELF_STUDY/cmake_practice/t3/lib/: CMakeLists.txt  hello.cpp  hello.h
SELF_STUDY/cmake_practice/t4/src/: CMakeLists.txt  main.cpp
扩展实验1_Canny边缘检测/扩展实验1_Canny边缘检测/: 源.cpp
拓展实验2_连通域的搜索/拓展实验2_连通域的搜索/: 源.cpp
拓展实验3_harris角点检测与绘制/拓展实验3_/: 源.cpp
