ADD_LIBRARY(hello SHARED hello.cpp)
ADD_LIBRARY(hello_static STATIC hello.cpp)
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)


GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
MESSAGE(STATUS "This is the hello_static OUTPUT_NAME:" ${OUTPUT_VALUE})

INSTALL(TARGETS hello hello_static
        LIBRARY DESTINATION lib 
        ARCHIVE DESTINATION lib )

INSTALL(FILES hello.h DESTINATION include/hello)